--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -44,6 +44,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Dạnh mục
                     </a>
+                    <a class="nav-link collapsed" id="colors" th:href="@{/admin/colors}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Màu sắc
+                    </a>
                 </div>
             </div>
         </nav>
