--- a/src/main/resources/templates/admin/mausac/colors.html
+++ b/src/main/resources/templates/admin/mausac/colors.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 
-<!--<head th:replace="admin/fragment/fragments:: page_head"></head>-->
+<head th:replace="admin/fragment/fragments:: page_head"></head>
 
 <style>
     * {
@@ -68,10 +68,10 @@
 </style>
 
 <body class="sb-nav-fixed" id="content">
-<!--<div th:replace="admin/fragment/navigation:: navbar"></div>-->
+<div th:replace="admin/fragment/navigation:: navbar"></div>
 <!-- Article NAV -->
 <div id="layoutSidenav">
-<!--    <div th:replace="admin/fragment/navigation:: menu"></div>-->
+    <div th:replace="admin/fragment/navigation:: menu"></div>
 
     <!-- aside -->
     <div id="layoutSidenav_content">
@@ -158,6 +158,6 @@
 <!-- END article -->
 
 <!--  Footer      -->
-<div th:replace="admin/fragment/fragments::footer"></div>
+<!--<div th:replace="admin/fragment/fragments::footer"></div>-->
 </body>
 </html>
