--- a/src/main/resources/templates/admin/khachhang/customers.html
+++ b/src/main/resources/templates/admin/khachhang/customers.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<!--<head th:replace="admin/fragment/fragments:: page_head"></head>-->
+<head th:replace="admin/fragment/fragments:: page_head"></head>
 
 <body class="sb-nav-fixed">
-<!--<div th:replace="admin/fragment/navigation:: navbar"></div>-->
+<div th:replace="admin/fragment/navigation:: navbar"></div>
 <div id="layoutSidenav">
-<!--    <div th:replace="admin/fragment/navigation:: menu"></div>-->
+    <div th:replace="admin/fragment/navigation:: menu"></div>
 
 
     <div id="layoutSidenav_content">
@@ -26,9 +26,9 @@
                         <input type="hidden" name="sortField" th:value="${sortField}" />
                         <input type="hidden" name="sortDir" th:value="${sortDir}" />
                         <label class="sr-only">Tìm Kiếm</label>
-                        <input style="width: 250px; margin-right: 10px" type="search" name="keyword" th:value="${keyword}" placeholder="nhập từ khóa tìm kiếm" class="form-control" required />
+                        <input style="width: 250px; margin-right: 10px" type="search" name="keyword" th:value="${keyword}" placeholder="Nhập tên khách hàng" class="form-control" required />
                         <input style="margin-right: 10px" type="submit" value="Search" class="btn btn-primary ml-2" />
-                        <input type="button" value="Clear" class="btn btn-secondary ml-2" onclick="clearFilter()"/>
+<!--                        <input type="button" value="Clear" class="btn btn-secondary ml-2" onclick="clearFilter()"/>-->
                     </div>
                 </form>
 
@@ -73,10 +73,12 @@
 <!--                        <td>[[${kh.gioiTinh}]]</td>-->
                         <td>[[${kh.thoiGianTaoTaiKhoan}]]</td>
                         <td>[[${kh.ngaySua}]]</td>
-                        <td>[[${kh.enabled}]]</td>
+                        <td>[[${kh.enabled? "Hoạt Động":"Không Hoạt Động"}]]</td>
 <!--                        <td>-->
 <!--                            <a class="icon-green" style="text-decoration: none" th:href="@{'/admin/customers/edit/' + ${kh.idKhachHang}}"-->
-<!--                               title="Thay đổi thông tin">Update</a>-->
+<!--                               title="Thay đổi thông tin">-->
+<!--                                <i style="color: blue" class="fas fa-edit"></i>-->
+<!--                            </a>-->
 <!--                        </td>-->
                     </tr>
                     </tbody>
