--- a/src/main/resources/templates/admin/xeta/Xeta.html
+++ b/src/main/resources/templates/admin/xeta/Xeta.html
@@ -113,7 +113,7 @@
                             </tr>
                             </thead>
                             <tbody>
-                            <tr th:each="cat :${listXeTa}">
+                            <tr th:each="cat :${listXeta}">
                                 <td>[[${cat.tenXeTa}]]</td>
                                 <td>[[${cat.moTaXeTa}]]</td>
                                 <td>[[${cat.enabled}]]</td>
