--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -48,6 +48,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Màu sắc
                     </a>
+                    <a class="nav-link collapsed" id="colors" th:href="@{/admin/design}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Họa tiết
+                    </a>
                 </div>
             </div>
         </nav>
