--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -40,6 +40,10 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Menu</div>
+                    <a class="nav-link collapsed" id="users" th:href="@{/admin/users}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
+                        Nhân viên
+                    </a>
                     <a class="nav-link collapsed" id="categories" th:href="@{/admin/categories}">
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Dạnh mục
