done sanPham and CTSP

--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -48,6 +48,14 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Màu sắc
                     </a>
+                    <a class="nav-link collapsed" id="products" th:href="@{/admin/products}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-shirt"></i></div>
+                        Sản phẩm
+                    </a>
+                    <a class="nav-link collapsed" id="productDetails" th:href="@{/admin/productDetails}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Chi tiết sản phẩm
+                    </a>
                 </div>
             </div>
         </nav>
