--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -13,6 +13,11 @@
     <link th:href="@{https://use.fontawesome.com/releases/v6.3.0/css/all.css}" crossorigin="anonymous">
     <script th:src="@{https://code.jquery.com/jquery-3.6.0.min.js}"></script>
     <script th:src="@{https://use.fontawesome.com/releases/v6.3.0/js/all.js}" crossorigin="anonymous"></script>
+    <script th:src="@{https://cdn.jquery.com/jquery-3.7.0.js}" crossorigin="anonymous"></script>
+    <script th:src="@{https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js}" crossorigin="anonymous"></script>
+    <script th:src="@{https://cdn.datatables.net/1.13.7/js/dataTables.bootstrap5.min.js}" crossorigin="anonymous"></script>
+    <script th:src="@{https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.0/css/bootstrap.min.css}" crossorigin="anonymous"></script>
+    <script th:src="@{https://cdn.datatables.net/1.13.7/css/dataTables.bootstrap5.min.css}" crossorigin="anonymous"></script>
     <script th:src="@{/js/scripts.js}"></script>
     <script th:src="@{/js/index_form.js}"></script>
     <script th:src="@{/js/bootstrap.min.js}"></script>
