--- a/src/main/resources/templates/admin/hoatiet/design_form.html
+++ b/src/main/resources/templates/admin/hoatiet/design_form.html
@@ -24,6 +24,13 @@
                     </div>
 
                     <div class="form-group-row">
+                        <label class="col-sm-4 col-form-label">Mô Tả:</label>
+                        <div class="col-sm-12">
+                            <input type="text" class="form-control" th:field="*{moTaHoaTiet}" id="moTaHoaTietInput" required minlength="3" maxlength="128"/>
+                        </div>
+                    </div>
+
+                    <div class="form-group-row">
                         <label class="col-sm-4 col-form-label">Trạng Thái:</label>
                         <div class="col-sm-12">
                             <input type="checkbox" th:field="*{enabled}">
@@ -69,9 +76,10 @@
 
 
     function checkDesignNameUnique(form) {
-        var url = "[[@{/admin/design/check_name}]]";
+        var url = "[[@{/admin/degins/check_name}]]";
         var hoaTietName = form.tenHoaTiet.value;
         var hoaTietId = form.idHoaTiet.value;
+
         var csrfValue = $("input[name='_csrf']").val();
         var params = {
             id: hoaTietId,
