--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -61,6 +61,10 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                       kiểu túi
                     </a>
+                        <a class="nav-link collapsed" id="veao" th:href="@{/admin/veao}">
+                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                            Ve áo
+                        </a>
                 </div>
             </div>
         </nav>
