--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -65,6 +65,14 @@
               th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
     </th>
 
+    <th th:fragment="veao_link(fieldVeAo, columnLabel)">
+        <a style="text-decoration: none; color: black"
+           th:href="@{'/admin/veao/page/' + ${currentPage} + '?sortField=' + ${fieldVeAo} + '&sortDir=' + ${sortField != fieldVeAo ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+            [[${columnLabel}]]
+        </a>
+        <span th:if="${sortField == fieldVeAo}" style="text-decoration: none; color: black"
+              th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+    </th>
     <th th:fragment="kieutui_link(fieldkieutui, columnLabel)">
         <a style="text-decoration: none; color: black"
            th:href="@{'/admin/kieutui/page/' + ${currentPage} + '?sortField=' + ${fieldkieutui} + '&sortDir=' + ${sortField != fieldDanhMuc ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
