--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -52,22 +52,27 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Màu sắc
                     </a>
-                    <a class="nav-link collapsed" id="colors" th:href="@{/admin/design}">
+                    <a class="nav-link collapsed" id="" th:href="@{/admin/design}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Họa tiết
+                        Họa tiết</a>
 
                     <a class="nav-link collapsed" id="xeta" th:href="@{/admin/xeta}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Xẻ tà
+                        Xẻ tà</a>
                     <a class="nav-link collapsed" id="kieudet" th:href="@{/admin/kieudet}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Kiểu dệt
+                        Kiểu dệt</a>
                     <a class="nav-link collapsed" id="chatlieu" th:href="@{/admin/chatlieu}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                        Chất Liệu
+                        Chất Liệu</a>
                     <a class="nav-link collapsed" id="kieutui" th:href="@{/admin/kieutui}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                       kiểu túi
+
+                    </a>
+                    <a class="nav-link collapsed" id="size" th:href="@{/admin/sizes}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        kích cỡ
 
                     </a>
                 </div>
