--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -6,6 +6,7 @@
 
 <div th:fragment="navbar">
     <nav class="sb-topnav navbar navbar-expand navbar-dark" style="background: rgb(20, 33, 62);color: white;">
+        <a class="navbar-brand ps-3" th:href="@{/admin}"><img src="static/images/logo.png" alt=""></a>
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
                 class="fas fa-bars"></i></button>
@@ -52,7 +53,7 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Màu sắc
                     </a>
-                    <a class="nav-link collapsed" id="colors" th:href="@{/admin/design}">
+                    <a class="nav-link collapsed" th:href="@{/admin/design}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Họa tiết
 
