--- a/src/main/resources/templates/admin/fragment/fragments.html
+++ b/src/main/resources/templates/admin/fragment/fragments.html
@@ -75,6 +75,14 @@
               th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
     </th>
 
+    <th th:fragment="cautruckhuy_link(fieldCauTrucKhuy, columnLabel)">
+        <a style="text-decoration: none; color: black"
+           th:href="@{'/admin/cautruckhuy/page/' + ${currentPage} + '?sortField=' + ${fieldCauTrucKhuy} + '&sortDir=' + ${sortField != fieldCauTrucKhuy ? sortDir : reverseSortDir} + ${keyword !=null ? '&keyword=' + keyword:''}}">
+            [[${columnLabel}]]
+        </a>
+        <span th:if="${sortField == fieldCauTrucKhuy}" style="text-decoration: none; color: black"
+              th:class="${sortDir == 'asc' ? 'fas fa-sort-up' : 'fas fa-sort-down'}"></span>
+    </th>
 
     <th th:fragment="kieutui_link(fieldkieutui, columnLabel)">
         <a style="text-decoration: none; color: black"
