--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -75,6 +75,11 @@
                         kích cỡ
 
                     </a>
+                    <a class="nav-link collapsed" id="loplot" th:href="@{/admin/loplot}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Lớp Lót
+
+                    </a>
                 </div>
             </div>
         </nav>
