--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -19,7 +19,7 @@
             overflow: hidden; /* Add this to prevent scroll bars */
         }
         body {
-            background-image: url('/images/bgr-login.gif'); /* Replace 'path/to/your/image.jpg' with the actual path to your image */
+            background-image: url('/images/background_login.jpg'); /* Replace 'path/to/your/image.jpg' with the actual path to your image */
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
