--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -11,7 +11,9 @@
                 class="fas fa-bars"></i></button>
         <!-- Input Box in the Middle -->
         <div class="d-flex mx-auto">
-            <input type="text" style="background-color: transparent; border: 1px solid white; color: white; width: 500px;" class="form-control" placeholder="Search..." />
+            <input type="text"
+                   style="background-color: transparent; border: 1px solid white; color: white; width: 500px;"
+                   class="form-control" placeholder="Search..."/>
             <i class="m-2 fa-regular fa-circle-question fa-flip fa-xl" style="color: #f5f5f5;"></i>
         </div>
         <!-- Navbar-->
@@ -67,25 +69,24 @@
                         Chất Liệu</a>
                     <a class="nav-link collapsed" id="kieutui" th:href="@{/admin/kieutui}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                      kiểu túi
-
+                        kiểu túi
                     </a>
                     <a class="nav-link collapsed" id="size" th:href="@{/admin/sizes}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         kích cỡ
-
                     </a>
                     <a class="nav-link collapsed" id="loplot" th:href="@{/admin/loplot}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Lớp Lót
-                    <a class="nav-link collapsed" id="size" th:href="@{/admin/cautruckhuy}">
-                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                    Cấu trúc khuy
                     </a>
-                        <a class="nav-link collapsed" id="veao" th:href="@{/admin/veao}">
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                            Ve áo
-                        </a>
+                    <a class="nav-link collapsed" id="cautruckhuy" th:href="@{/admin/cautruckhuy}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Cấu trúc khuy
+                    </a>
+                    <a class="nav-link collapsed" id="veao" th:href="@{/admin/veao}">
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Ve áo
+                    </a>
                 </div>
             </div>
         </nav>
