--- a/src/main/resources/templates/admin/error/404.html
+++ b/src/main/resources/templates/admin/error/404.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org",
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<head th:replace="fragment/fragments:: page_head('Thông Báo Lỗi - 5SWatch ')"/>
+<head th:replace="fragment/fragments:: page_head('Thông Báo Lỗi')"/>
 
 <body>
 <div class="container-fluid">
@@ -12,7 +12,6 @@
         <h2>Rất tiếc không tìm thấy trang yêu cầu 404</h2>
 
     </div>
-    <div th:replace="fragment/fragments::footer"></div>
 
 </div>
 </body>
