--- a/src/main/resources/templates/admin/fragment/navigation.html
+++ b/src/main/resources/templates/admin/fragment/navigation.html
@@ -50,6 +50,23 @@
                         <div class="sb-nav-link-icon"><i class="fas fa-layer-group"></i></div>
                         Dạnh mục
                     </a>
+                    <a class="nav-link collapsed" id="products" th:href="@{/admin/products}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Sản phẩm
+                    </a>
+                    <a class="nav-link collapsed" id="productDetails" th:href="@{/admin/productDetails}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Chi tiết sản phẩm
+                    </a>
+                    <a class="nav-link collapsed" id="customers" th:href="@{/admin/customers}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Khách Hàng
+                    </a>
+
+                    <a class="nav-link collapsed" id="discounts" th:href="@{/admin/discounts}" >
+                        <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
+                        Khuyến mại
+                    </a>
                     <a class="nav-link collapsed" id="colors" th:href="@{/admin/colors}">
                         <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
                         Màu sắc
