--- a/src/main/resources/templates/admin/error/505.html
+++ b/src/main/resources/templates/admin/error/505.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org",
       xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 
-<head th:replace="fragment/fragments:: page_head('Thông Báo Lỗi - 5SWatch ')"/>
+<head th:replace="fragment/fragments:: page_head('Thông Báo Lỗi')"/>
 
 <body>
 <div class="container-fluid">
@@ -12,8 +12,6 @@
         <h2>Rất tiếc, máy chủ đã gặp lỗi khi xử lý yêu cầu của bạn 505</h2>
 
     </div>
-    <div th:replace="fragment/fragments::footer"></div>
-
 </div>
 </body>
 </html>
