--- a/src/main/resources/templates/admin/sanpham/product_edit.html
+++ b/src/main/resources/templates/admin/sanpham/product_edit.html
@@ -13,87 +13,64 @@
             </div>
 
             <form th:action="@{/admin/products/update}" method="post" onsubmit="return checkUniqueEdit(this)"
-                  enctype="multipart/form-data"
-                  th:object="${sanPham}">
-                <input type="hidden" th:field="*{idSanPham}"/>
-                <input type="hidden" th:field="*{currentMainImage}" th:value="${sanPham.mainImage}" />
-                <div>
-                    <!-- Nav tabs -->
-                    <ul class="nav nav-tabs" id="myTab" role="tablist">
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#overview" type="button" role="tab">OverView</button>
-                        </li>
-                        <li class="nav-item" role="presentation">
-                            <button class="nav-link"  data-bs-toggle="tab" data-bs-target="#images" type="button" role="tab">Images</button>
-                        </li>
-                    </ul>
-
-                    <!-- Tab panes -->
-                    <div class="tab-content">
-                        <div class="tab-pane active p-3" id="overview" role="tabpanel">
-
-                            <div class="form-group-row">
-                                <label class="col-sm-2 col-form-label">Mã Sản Phẩm:</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" th:field="*{maSanPham}"  required minlength="3" maxlength="10"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group-row">
-                                <label class="col-sm-2 col-form-label">Tên Sản Phẩm:</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" th:field="*{tenSanPham}" id="tenSanPhamInput" required minlength="3" maxlength="128"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group-row">
-                                <label class="col-sm-2 col-form-label">Mô Tả Sản Phẩm:</label>
-                                <div class="col-sm-10">
-                                    <input type="text" class="form-control" th:field="*{moTaSanPham}" required minlength="3" maxlength="128"/>
-                                </div>
-                            </div>
-
-                            <div class="form-group-row">
-                                <label class="col-sm-2 col-form-label">Danh Mục:</label>
-                                <div class="col-sm-10">
-                                    <select th:field="*{danhMuc}" class="form-control" required="">
-                                        <th:block th:each="category : ${listDanhMuc}">
-                                            <option th:value="${category.id}">[[${category.ten}]]</option>
-                                        </th:block>
-
-                                    </select>
-                                </div>
-                            </div>
-
-                            <div class="form-group-row">
-                                <label class="col-sm-4 col-form-label">Trạng Thái:</label>
-                                <div class="col-sm-12">
-                                    <label class="radio-inline">
-                                        <input type="radio" th:field="*{trangThai}" th:value="1"> Hoạt động
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" th:field="*{trangThai}" th:value="0"> Ngưng hoạt động
-                                    </label>
-                                </div>
-                            </div>
-
-
+                  enctype="multipart/form-data" th:object="${sanPham}">
+                <input type="hidden" th:field="*{currentMainImage}" th:value="${sanPham.mainImage}"/>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <h6 for="maSanPham">Mã Sản Phẩm:</h6>
+                            <input type="text" class="form-control" th:field="*{maSanPham}" required
+                                   minlength="3" maxlength="10"/>
                         </div>
-                        <div class="tab-pane" id="images" role="tabpanel">
-                            <div class="row">
+                        <div class="form-group">
+                            <h6 for="tenSanPham">Tên Sản Phẩm:</h6>
+                            <input type="text" class="form-control" th:field="*{tenSanPham}" required
+                                   minlength="3" maxlength="128"/>
+                        </div>
+                        <div class="form-group">
+                            <h6 for="danhMuc">Danh Mục:</h6>
+                            <select th:field="*{danhMuc}" class="form-control" required>
+                                <th:block th:each="category : ${listDanhMuc}">
+                                    <option th:value="${category.id}" th:text="${category.ten}"></option>
+                                </th:block>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <h6 for="trangThai">Trạng Thái:</h6>
+                            <div>
+                                <label class="radio-inline">
+                                    <input type="radio" th:field="*{trangThai}" th:value="1" /> Hoạt động
+                                </label>
+                                <label class="radio-inline">
+                                    <input type="radio" th:field="*{trangThai}" th:value="0"/> Ngưng hoạt động
+                                </label>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <h6 for="moTaSanPham">Mô Tả Sản Phẩm:</h6>
+                            <textarea class="form-control" id="moTaSanPham" name="moTaSanPham" th:field="*{moTaSanPham}" required
+                                      minlength="3" maxlength="1024" rows="4"></textarea>
+                        </div>
 
-                                <div class="col border m-3 p-2">
-                                    <div><label>Ảnh Chính</label></div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="card" >
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <h6>Ảnh Chính</h6>
                                 </div>
-                                <div class="m-2">
-                                    <img id="thumbnail" alt="Main Image Preview" class="img-fluid"
+                                <div class="form-group">
+                                    <img id="thumbnail"  class="img-fluid"
                                          th:src="@{${sanPham.getMainImagePath}}"/>
                                 </div>
-                                <div>
-                                    <input type="file" id="fileImage" name="fileImage"
-                                           accept="image/png,image/jpeg"/>
+                                <div class="form-group">
+                                    <label for="fileImage" class="custom-file-upload">
+                                        <i class="fa fa-cloud-upload"></i> Chọn ảnh
+                                    </label>
+                                    <input type="file" id="fileImage" name="fileImage" multiple
+                                           accept="image/png,image/jpeg" style="display: none;"/>
                                 </div>
-
                             </div>
                         </div>
                     </div>
