--- a/src/main/resources/templates/admin/chitietsanpham/product_detail_create.html
+++ b/src/main/resources/templates/admin/chitietsanpham/product_detail_create.html
@@ -248,53 +248,65 @@
 </div>
 
 
-<!--<script type="text/javascript">-->
-<!--    moduleURL= "[[@{/admin/productDetails}]]";-->
+<script type="text/javascript">
+    moduleURL= "[[@{/admin/productDetails}]]";
 
-<!--    $("#buttonCancel").on("click", function () {-->
-<!--        window.location = moduleURL;-->
-<!--    });-->
+    $("#buttonCancel").on("click", function () {
+        window.location = moduleURL;
+    });
 
 
-<!--    function checkNameUniqueCreate(form) {-->
-<!--        var url = "[[@{/admin/productDetails/check_details_unique}]]";-->
-<!--        var selectedSanPham = form.sanPham.options[form.sanPham.selectedIndex].text;-->
-<!--        // var selectedDayDeo = form.dayDeo.options[form.dayDeo.selectedIndex].text;-->
-<!--        var selectedMauSac = form.mauSac.options[form.mauSac.selectedIndex].text;-->
-<!--        // var selectedVatLieu = form.vatLieu.options[form.vatLieu.selectedIndex].text;-->
-<!--        // var selectedKichCo = form.kichCo.options[form.kichCo.selectedIndex].text;-->
+    function checkNameUniqueCreate(form) {
+        var url = "[[@{/admin/productDetails/check_details_unique}]]";
+        var selectedSanPham = form.sanPham.options[form.sanPham.selectedIndex].text;
+        var selectedMauSac = form.mauSac.options[form.mauSac.selectedIndex].text;
+        var selectedKichCo = form.kichCo.options[form.kichCo.selectedIndex].text;
+        var selectedChatLieu = form.chatLieu.options[form.chatLieu.selectedIndex].text;
+        var selectedCauTrucKhuy = form.cauTrucKhuy.options[form.cauTrucKhuy.selectedIndex].text;
+        var selectedHoaTiet = form.hoaTiet.options[form.hoaTiet.selectedIndex].text;
+        var selectedKieuDet = form.kieuDet.options[form.kieuDet.selectedIndex].text;
+        var selectedKieuTui = form.kieuTui.options[form.kieuTui.selectedIndex].text;
+        var selectedLopLot = form.lopLot.options[form.lopLot.selectedIndex].text;
+        var selectedVeAo = form.veAo.options[form.veAo.selectedIndex].text;
+        var selectedXeTa = form.xeTa.options[form.xeTa.selectedIndex].text;
 
-<!--        var maChiTietSanPhamValue = form.maChiTietSanPham.value;-->
-<!--        var csrfValue = $("input[name='_csrf']").val();-->
+        var maChiTietSanPhamValue = form.maChiTietSanPham.value;
+        var csrfValue = $("input[name='_csrf']").val();
 
-<!--        var params = {-->
-<!--            maChiTietSanPham: maChiTietSanPhamValue,-->
-<!--            tenSanPham: selectedSanPham,-->
-<!--            // tenDayDeo: selectedDayDeo,-->
-<!--            tenMauSac: selectedMauSac,-->
-<!--            // tenKichCo: selectedKichCo,-->
-<!--            // tenVatLieu: selectedVatLieu,-->
-<!--            _csrf: csrfValue-->
-<!--        };-->
+        var params = {
+            maChiTietSanPham: maChiTietSanPhamValue,
+            tenSanPham: selectedSanPham,
+            tenMauSac: selectedMauSac,
+            tenKichCo: selectedKichCo,
+            tenChatLieu: selectedChatLieu,
+            tenCauTrucKhuy: selectedCauTrucKhuy,
+            tenHoaTiet: selectedHoaTiet,
+            tenKieuDet: selectedKieuDet,
+            tenKieuTui: selectedKieuTui,
+            tenLopLot: selectedLopLot,
+            tenVeAo: selectedVeAo,
+            tenXeTa: selectedXeTa,
+            _csrf: csrfValue
+        };
 
-<!--        $.post(url, params)-->
-<!--            .done(function(response) {-->
-<!--                if (response == "OK") {-->
-<!--                    form.submit();-->
-<!--                } else if (response == "Duplicated") {-->
-<!--                    showWarningModal("Mã Hoặc Thông tin chi tiết sản phẩm đã tồn tại Hãy Kiểm Tra Mã và Các Trường Tên Sản Phẩm ,Tên Dây Đeo, Tên Vật Liệu, Tên Màu Sắc, Tên Kích Cỡ Không Được Đồng Thời Giống Nhau.");-->
-<!--                } else {-->
-<!--                    showErrorModal("Lỗi phản hồi từ server");-->
-<!--                }-->
-<!--            })-->
-<!--            .fail(function() {-->
-<!--                showErrorModal("Không thể kết nối đến server");-->
-<!--            });-->
+        $.post(url, params)
+            .done(function(response) {
+                if (response == "OK") {
+                    form.submit();
+                } else if (response == "Duplicated") {
+                    showWarningModal("Mã Hoặc Thông tin chi tiết sản phẩm đã tồn tại Hãy Kiểm Tra Mã và Các Trường Tên Sản Phẩm ,Tên Cấu Trúc Khuy, Tên Chất Liệu, Tên Màu Sắc, Tên Kích Cỡ Không Được Đồng Thời Giống Nhau.");
+                } else {
+                    showErrorModal("Lỗi phản hồi từ server");
+                }
+            })
+            .fail(function() {
+                showErrorModal("Không thể kết nối đến server");
+            });
 
-<!--        return false;-->
-<!--    }-->
+        return false;
+    }
 
-<!--</script>-->
+</script>
 <script th:src="@{/js/index_form.js}"></script>
 </body>
 </html>
